--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.11",
     "@mui/material": "^5.10.8",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "firebase": "^9.11.0",
     "font-awesome": "^4.7.0",
     "heroicons": "^2.0.11",
